Don't escape form field HTML

--- a/views/form.latte
+++ b/views/form.latte
@@ -1,5 +1,5 @@
 <form>
     {foreach $form->getFormFields() as $field}
-        {$field->getHtml()}
+        {$field->getHtml()|noescape}
     {/foreach}
 </form>
