Add method to form

--- a/views/form.latte
+++ b/views/form.latte
@@ -1,4 +1,4 @@
-<form>
+<form method="{$form->getRequestMethod()}">
     {foreach $form->getFormFields() as $field}
         {$field->getHtml()|noescape}
     {/foreach}
